--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 asgiref==3.5.0
+backports.zoneinfo==0.2.1
 Django==4.0.3
+django-phonenumber-field==6.1.0
+phonenumberslite==8.12.46
+Pillow==9.1.0
 sqlparse==0.4.2
 tzdata==2022.1
